Updated BusinessProcessDataModel by removing associatedGroups from ProcessInstanceGroupDAO
